// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> create auto-complete Search input 1`] = `
<div
  className="fd-search-input"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Image label"
        className="fd-combobox-control"
      >
        <div
          className="fd-input-group fd-input-group--after"
        >
          <input
            className="fd-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Hello there"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="fd-popover__body fd-popover__body--no-arrow"
    >
      <nav
        className="fd-menu"
      >
        <ul
          className="fd-menu__list"
        >
          <li>
            <a
              className="fd-menu__item is-selected"
              href="#"
              onClick={[Function]}
            >
              apple
            </a>
          </li>
          <li>
            <a
              className="fd-menu__item"
              href="#"
              onClick={[Function]}
            >
              banana
            </a>
          </li>
          <li>
            <a
              className="fd-menu__item"
              href="#"
              onClick={[Function]}
            >
              orange
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create autocomplete Search input with no data 1`] = `
<div
  className="fd-search-input"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Image label"
        className="fd-combobox-control"
      >
        <div
          className="fd-input-group fd-input-group--after"
        >
          <input
            className="fd-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Hello there"
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="fd-popover__body fd-popover__body--no-arrow"
    >
      <nav
        className="fd-menu"
      >
        <ul
          className="fd-menu__list"
        >
          <li>
            <a
              className="fd-menu__item"
              href="#"
            >
              No results found
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create basic Search input 1`] = `
<div
  className="fd-search-input"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Image label"
        className="fd-combobox-control"
      >
        <div
          className="fd-input-group fd-input-group--after"
        >
          <input
            className="fd-input"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Hello there"
            type="text"
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--search"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
